<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/floralwhite"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/kakaotalk_yogat_yellow" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="10dp"
        android:background="@color/input_register_bg"
        android:hint="@string/hint_id"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/emailCheck"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/cafe24oneprettynight"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="440dp"/>

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="480dp"
        android:background="@color/input_register_bg"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint" />

    <TextView
        android:id="@+id/pwdCheck"
        android:layout_marginTop="520dp"
        android:layout_marginLeft="30dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cafe24oneprettynight"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="440dp"
        android:layout_marginLeft="280dp"
        android:text="@string/btn_login"
        android:textColor="@color/dimgray"
        android:background="@drawable/button_bg_round2"
        android:fontFamily="@font/cafe24ssurround"/>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginTop="550dp"
        android:fontFamily="@font/cafe24oneprettynight"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="#00ff0000"
        android:text="@string/underlined_dynamic_text"
        android:textColor="@color/black" />

</RelativeLayout>